# arboretum

./: .gitignore  .gitmodules  Cargo.toml  README.md  tmp.td
.github/workflows/: ci.yml
benches/: benchmark.rs
scripts/: run_with_timeout.py
src/: datastructures.rs  heuristic_elimination_order.rs  io.rs  lib.rs  log.rs  lowerbound.rs  main.rs  preprocessing.rs  rule_based_reducer.rs  safe_separator_framework.rs  signals.rs  solver.rs  timeout.rs  tree_decomposition.rs  upperbound.rs  util.rs
src/abc/: builder.rs  candidate.rs  colony.rs  config.rs  mod.rs
src/exact/: mod.rs  pid.rs  quickbb.rs  tamakipid.rs
src/graph/: bag.rs  base_graph.rs  bit_graph.rs  graph.rs  hash_map_graph.rs  mod.rs  mutable_graph.rs  tree_decomposition.rs
src/meta_heuristics/: mod.rs  tabu_local_search.rs
