[package]
name = "arboretum"
version = "0.1.0"
authors = ["Johannes Meintrup <johannes.meintrup@mni.thm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.0"
rand = "0.7.3"
fnv = "1.0.7"
bitvec = "0.19.1"
structopt = "0.3.21"
jemallocator = "0.3.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "arboretum-cli"
path = "src/main.rs"
test = false
bench = false